--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Loaded 1.26.4 version of numpy!!!\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "print(\"Loaded\", np.__version__, \"version of numpy!!!\")"
    ]
   },
   {
@@ -51,11 +63,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random array with np.random.rand:\n",
+      " [[[0.58428446 0.60607821 0.0541152  0.74299659 0.78550535]\n",
+      "  [0.2086138  0.02785458 0.87894035 0.53654555 0.74639764]\n",
+      "  [0.33292232 0.70652789 0.71349606 0.25996682 0.72466057]]\n",
+      "\n",
+      " [[0.98846808 0.8129031  0.18944792 0.15129836 0.80673251]\n",
+      "  [0.69630725 0.05006484 0.8508381  0.20884948 0.60758762]\n",
+      "  [0.12933301 0.54091726 0.11371774 0.1661586  0.93428604]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2,3,5)\n",
+    "print(\"Random array with np.random.rand:\\n\", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Integers:\n",
+      " [[[78 95 80 19 32]\n",
+      "  [85 86 76 17 52]\n",
+      "  [42 74 97 52 86]]\n",
+      "\n",
+      " [[78 95 60 21 81]\n",
+      "  [87 44 32 69 34]\n",
+      "  [92 80 50 20 68]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "low, high = 10, 100 # do you have to specify the integers?\n",
+    "random_integers = np.random.randint(low, high, size=(2, 3, 5))\n",
+    "print(\"Random Integers:\\n\", random_integers)"
    ]
   },
   {
@@ -68,11 +123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random array with np.random.rand:\n",
+      " [[[0.58428446 0.60607821 0.0541152  0.74299659 0.78550535]\n",
+      "  [0.2086138  0.02785458 0.87894035 0.53654555 0.74639764]\n",
+      "  [0.33292232 0.70652789 0.71349606 0.25996682 0.72466057]]\n",
+      "\n",
+      " [[0.98846808 0.8129031  0.18944792 0.15129836 0.80673251]\n",
+      "  [0.69630725 0.05006484 0.8508381  0.20884948 0.60758762]\n",
+      "  [0.12933301 0.54091726 0.11371774 0.1661586  0.93428604]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"Random array with np.random.rand:\\n\", a)"
    ]
   },
   {
@@ -85,11 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +174,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array with all values equaling 1:\n",
+      " [[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"array with all values equaling 1:\\n\", b)"
    ]
   },
   {
@@ -119,11 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n",
+      "Do a and b have the same size? True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a.size)\n",
+    "print(b.size)\n",
+    "\n",
+    "same_size = a.size == b.size\n",
+    "print(\"Do a and b have the same size?\", same_size)"
    ]
   },
   {
@@ -136,11 +246,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m addition \u001b[38;5;241m=\u001b[39m a \u001b[38;5;241m+\u001b[39m b\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "addition = a + b\n",
+    "\n",
+    "# ValueError: operands could not be broadcast together with shapes (2,3,5) (5,2,3) \n",
+    "# -----\n",
+    "# a and b are same size but different shape"
    ]
   },
   {
@@ -154,11 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of c after transposition:\n",
+      " (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.transpose((1, 2, 0)) # do not understand why these numbers there!\n",
+    "# c = b.transpose()\n",
+    "print(\"Shape of c after transposition:\\n\", c.shape)\n"
    ]
   },
   {
@@ -171,11 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "d = a + c\n",
+    "\n",
+    "# it works because they are the same shape (and size)!\n"
    ]
   },
   {
@@ -188,12 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.58428446 1.60607821 1.0541152  1.74299659 1.78550535]\n",
+      "  [1.2086138  1.02785458 1.87894035 1.53654555 1.74639764]\n",
+      "  [1.33292232 1.70652789 1.71349606 1.25996682 1.72466057]]\n",
+      "\n",
+      " [[1.98846808 1.8129031  1.18944792 1.15129836 1.80673251]\n",
+      "  [1.69630725 1.05006484 1.8508381  1.20884948 1.60758762]\n",
+      "  [1.12933301 1.54091726 1.11371774 1.1661586  1.93428604]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(d)\n"
    ]
   },
   {
@@ -206,11 +363,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.58428446 0.60607821 0.0541152  0.74299659 0.78550535]\n",
+      "  [0.2086138  0.02785458 0.87894035 0.53654555 0.74639764]\n",
+      "  [0.33292232 0.70652789 0.71349606 0.25996682 0.72466057]]\n",
+      "\n",
+      " [[0.98846808 0.8129031  0.18944792 0.15129836 0.80673251]\n",
+      "  [0.69630725 0.05006484 0.8508381  0.20884948 0.60758762]\n",
+      "  [0.12933301 0.54091726 0.11371774 0.1661586  0.93428604]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "print(e)"
    ]
   },
   {
@@ -224,12 +397,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are `a` and `e` the same? [[[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]\n",
+      "\n",
+      " [[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "are_same = a == e\n",
+    "print(\"Are `a` and `e` the same?\", are_same)  \n",
+    "\n",
+    "# Do not understand why!!!"
    ]
   },
   {
@@ -243,38 +434,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max value in d: 1.9884680765392746\n",
+      "Min value in d: 1.0278545789149813\n",
+      "Mean value in d: 1.5051938432536711\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "\n",
+    "# Find the mean value in the array\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(\"Max value in d:\", d_max)\n",
+    "print(\"Min value in d:\", d_min)\n",
+    "print(\"Mean value in d:\", d_mean)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "### 15. Now we want to label the values in d. First create an empty array \"f\" with the same shape (i.e. 2x3x5) as d using `np.empty`.\n"
+    "### 15. Now we want to label the values in d. First create an empty array \"f\" with the same shape (i.e. 2x3x5) as d using `np.empty`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.58428446 0.60607821 0.0541152  0.74299659 0.78550535]\n",
+      "  [0.2086138  0.02785458 0.87894035 0.53654555 0.74639764]\n",
+      "  [0.33292232 0.70652789 0.71349606 0.25996682 0.72466057]]\n",
+      "\n",
+      " [[0.98846808 0.8129031  0.18944792 0.15129836 0.80673251]\n",
+      "  [0.69630725 0.05006484 0.8508381  0.20884948 0.60758762]\n",
+      "  [0.12933301 0.54091726 0.11371774 0.1661586  0.93428604]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "f = np.empty((2,3,5))\n",
+    "print(f)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "### 16. Populate the values in f. For each value in d, if it's larger than d_min but smaller than d_mean, assign 25 to the corresponding value in f.\n",
     "If a value in d is larger than d_mean but smaller than d_max, assign 75 to the corresponding value in f.\n",
     "If a value equals to d_mean, assign 50 to the corresponding value in f.\n",
@@ -287,11 +511,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array f:\n",
+      " [[[ 75.  75.  25.  75.  75.]\n",
+      "  [ 25.   0.  75.  75.  75.]\n",
+      "  [ 25.  75.  75.  25.  75.]]\n",
+      "\n",
+      " [[100.  75.  25.  25.  75.]\n",
+      "  [ 75.  25.  75.  25.  75.]\n",
+      "  [ 25.  75.  25.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d[i, j, k] > d_min and d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d[i, j, k] > d_mean and d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "\n",
+    "# Print the populated array f\n",
+    "print(\"Array f:\\n\", f)"
    ]
   },
   {
@@ -325,11 +581,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is D: [[[1.58428446 1.60607821 1.0541152  1.74299659 1.78550535]\n",
+      "  [1.2086138  1.02785458 1.87894035 1.53654555 1.74639764]\n",
+      "  [1.33292232 1.70652789 1.71349606 1.25996682 1.72466057]]\n",
+      "\n",
+      " [[1.98846808 1.8129031  1.18944792 1.15129836 1.80673251]\n",
+      "  [1.69630725 1.05006484 1.8508381  1.20884948 1.60758762]\n",
+      "  [1.12933301 1.54091726 1.11371774 1.1661586  1.93428604]]] \n",
+      "\n",
+      "This is F: [[[ 75.  75.  25.  75.  75.]\n",
+      "  [ 25.   0.  75.  75.  75.]\n",
+      "  [ 25.  75.  75.  25.  75.]]\n",
+      "\n",
+      " [[100.  75.  25.  25.  75.]\n",
+      "  [ 75.  25.  75.  25.  75.]\n",
+      "  [ 25.  75.  25.  25.  75.]]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"This is D:\", d, \"\\n\")\n",
+    "print(\"This is F:\", f, \"\\n\")"
    ]
   },
   {
@@ -350,17 +631,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array f with string labels:\n",
+      " [[['D' 'D' 'B' 'D' 'D']\n",
+      "  ['B' 'A' 'D' 'D' 'D']\n",
+      "  ['B' 'D' 'D' 'B' 'D']]\n",
+      "\n",
+      " [['E' 'D' 'B' 'B' 'D']\n",
+      "  ['D' 'B' 'D' 'B' 'D']\n",
+      "  ['B' 'D' 'B' 'B' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "g = np.empty(d.shape, dtype=object)\n",
+    "\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                g[i, j, k] = \"A\"   # Assign label \"A\" for d_min\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                g[i, j, k] = \"E\"   # Assign label \"E\" for d_max\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                g[i, j, k] = \"C\"   # Assign label \"C\" for d_mean\n",
+    "            elif d[i, j, k] > d_min and d[i, j, k] < d_mean:\n",
+    "                g[i, j, k] = \"B\"   # Assign label \"B\" for values between d_min and d_mean\n",
+    "            elif d[i, j, k] > d_mean and d[i, j, k] < d_max:\n",
+    "                g[i, j, k] = \"D\"   # Assign label \"D\" for values between d_mean and d_max\n",
+    "\n",
+    "# Print the populated array f\n",
+    "print(\"Array f with string labels:\\n\", g)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
