Lab exercises are solved.

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Version of numpy: 1.26.4\n",
+      "Numpy configuration:\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/ProgramData/anaconda3/Library/include\n",
+      "    lib directory: C:/ProgramData/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1583119523984\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.12'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"Version of numpy:\", np.__version__)\n",
+    "print(\"Numpy configuration:\")\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a=np.random.random((2,3,5))\n",
+    "\n",
+    "\n",
+    "a=np.random.randint(5, size=(2,3,5))\n",
+    "\n",
+    "\n",
+    "a=np.random.uniform(10,20, size=(2,3,5))\n"
    ]
   },
   {
@@ -68,11 +159,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[15.49660004 10.92690018 16.77802012 10.90358561 14.00964668]\n",
+      "  [18.12728054 17.93503132 18.38386346 18.0313192  12.20957923]\n",
+      "  [17.2722531  18.81439503 18.62513584 13.34819673 18.81745318]]\n",
+      "\n",
+      " [[13.80131435 13.87552441 15.06819442 17.35342489 17.23728229]\n",
+      "  [17.65633887 17.92320931 19.86750258 10.74076138 17.33723111]\n",
+      "  [16.06558369 12.33165448 17.0722685  17.41962202 19.90701733]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))"
    ]
   },
   {
@@ -102,11 +209,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "np.size(a) == np.size(b)"
    ]
   },
   {
@@ -136,11 +277,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Due to different array shapes, the operation is not possible.\n",
+      " operands could not be broadcast together with shapes (2,3,5) (5,2,3) \n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "try:\n",
+    "    a+b\n",
+    "except ValueError as e:\n",
+    "    print(f\"Due to different array shapes, the operation is not possible.\\n\",e)"
    ]
   },
   {
@@ -154,11 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c=np.transpose(b,(1,2,0))"
    ]
   },
   {
@@ -171,11 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "try:\n",
+    "   d=a+c\n",
+    "except ValueError as e:\n",
+    "    print(f\"Due to different array shapes, the operation is not possible.\\n\",e)  #Because they have the same shape now."
    ]
   },
   {
@@ -188,12 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:\n",
+      " [[[15.49660004 10.92690018 16.77802012 10.90358561 14.00964668]\n",
+      "  [18.12728054 17.93503132 18.38386346 18.0313192  12.20957923]\n",
+      "  [17.2722531  18.81439503 18.62513584 13.34819673 18.81745318]]\n",
+      "\n",
+      " [[13.80131435 13.87552441 15.06819442 17.35342489 17.23728229]\n",
+      "  [17.65633887 17.92320931 19.86750258 10.74076138 17.33723111]\n",
+      "  [16.06558369 12.33165448 17.0722685  17.41962202 19.90701733]]]\n",
+      "d:\n",
+      " [[[16.49660004 11.92690018 17.77802012 11.90358561 15.00964668]\n",
+      "  [19.12728054 18.93503132 19.38386346 19.0313192  13.20957923]\n",
+      "  [18.2722531  19.81439503 19.62513584 14.34819673 19.81745318]]\n",
+      "\n",
+      " [[14.80131435 14.87552441 16.06819442 18.35342489 18.23728229]\n",
+      "  [18.65633887 18.92320931 20.86750258 11.74076138 18.33723111]\n",
+      "  [17.06558369 13.33165448 18.0722685  18.41962202 20.90701733]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(\"a:\\n\",a)\n",
+    "print(\"d:\\n\",d)\n",
+    "\n",
+    "#each element in a is incremented by 1 so now d is equal to a+1."
    ]
   },
   {
@@ -206,11 +391,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[15.49660004, 10.92690018, 16.77802012, 10.90358561,\n",
+       "         14.00964668],\n",
+       "        [18.12728054, 17.93503132, 18.38386346, 18.0313192 ,\n",
+       "         12.20957923],\n",
+       "        [17.2722531 , 18.81439503, 18.62513584, 13.34819673,\n",
+       "         18.81745318]],\n",
+       "\n",
+       "       [[13.80131435, 13.87552441, 15.06819442, 17.35342489,\n",
+       "         17.23728229],\n",
+       "        [17.65633887, 17.92320931, 19.86750258, 10.74076138,\n",
+       "         17.33723111],\n",
+       "        [16.06558369, 12.33165448, 17.0722685 , 17.41962202,\n",
+       "         19.90701733]]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e=a*c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "are_equal=np.array_equal(a,e)\n",
+    "\n",
+    "print(are_equal)   # Because the elements in the array c were all 1."
    ]
   },
   {
@@ -243,12 +463,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.907017334507486\n",
+      "11.740761375203867\n",
+      "17.111206328228928\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max=np.max(d)\n",
+    "print(d_max)\n",
+    "\n",
+    "d_min=np.min(d)\n",
+    "print(d_min)\n",
+    "\n",
+    "d_mean=np.mean(d)\n",
+    "print(d_mean)\n"
    ]
   },
   {
@@ -261,11 +499,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[16.49660004 11.92690018 17.77802012 11.90358561 15.00964668]\n",
+      "  [19.12728054 18.93503132 19.38386346 19.0313192  13.20957923]\n",
+      "  [18.2722531  19.81439503 19.62513584 14.34819673 19.81745318]]\n",
+      "\n",
+      " [[14.80131435 14.87552441 16.06819442 18.35342489 18.23728229]\n",
+      "  [18.65633887 18.92320931 20.86750258 11.74076138 18.33723111]\n",
+      "  [17.06558369 13.33165448 18.0722685  18.41962202 20.90701733]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f=np.empty((2,3,5))\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +541,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[25 25 75 25 25]\n",
+      "  [75 75 75 75 25]\n",
+      "  [75 75 75 25 75]]\n",
+      "\n",
+      " [[25 25 25 75 75]\n",
+      "  [75 75 75 0 75]\n",
+      "  [25 25 75 75 100]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[(d > d_mean) & (d < d_max)] = 75 \n",
+    "f[d == d_mean] = 50\n",
+    "f[d == d_min] = 0\n",
+    "f[d == d_max] = 100\n",
+    "\n",
+    "print(f)\n"
    ]
   },
   {
@@ -325,11 +600,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[16.49660004 11.92690018 17.77802012 11.90358561 15.00964668]\n",
+      "  [19.12728054 18.93503132 19.38386346 19.0313192  13.20957923]\n",
+      "  [18.2722531  19.81439503 19.62513584 14.34819673 19.81745318]]\n",
+      "\n",
+      " [[14.80131435 14.87552441 16.06819442 18.35342489 18.23728229]\n",
+      "  [18.65633887 18.92320931 20.86750258 11.74076138 18.33723111]\n",
+      "  [17.06558369 13.33165448 18.0722685  18.41962202 20.90701733]]]\n",
+      "[[[25 25 75 25 25]\n",
+      "  [75 75 75 75 25]\n",
+      "  [75 75 75 25 75]]\n",
+      "\n",
+      " [[25 25 25 75 75]\n",
+      "  [75 75 75 0 75]\n",
+      "  [25 25 75 75 100]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,17 +648,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'B' 'D' 'B' 'B']\n",
+      "  ['D' 'D' 'D' 'D' 'B']\n",
+      "  ['D' 'D' 'D' 'B' 'D']]\n",
+      "\n",
+      " [['B' 'B' 'B' 'D' 'D']\n",
+      "  ['D' 'D' 'D' 'A' 'D']\n",
+      "  ['B' 'B' 'D' 'D' 'E']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "\n",
+    "f[(d > d_min) & (d < d_mean)] = 'B'\n",
+    "f[(d > d_mean) & (d < d_max)] = 'D'\n",
+    "f[d == d_mean] = 'C'\n",
+    "f[d == d_min] = 'A'\n",
+    "f[d == d_max] = 'E'\n",
+    "\n",
+    "print(f)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
