--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24.3\n",
+      "blas_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "blas_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\include']\n",
+      "blas_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\include']\n",
+      "lapack_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "lapack_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\include']\n",
+      "lapack_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/R/anaconda3\\\\Library\\\\include']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
+      "    not found = AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "\n",
+    "# Print NumPy configuration\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +92,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.68969381 0.22268912 0.97799376 0.42351374 0.39780259]\n",
+      "  [0.96327845 0.26295311 0.20990041 0.35455907 0.19635142]\n",
+      "  [0.68223297 0.70961931 0.17439086 0.70267528 0.52303701]]\n",
+      "\n",
+      " [[0.5520434  0.03142683 0.99272793 0.12862603 0.01915772]\n",
+      "  [0.78019738 0.87670073 0.34836149 0.32259399 0.06689156]\n",
+      "  [0.64757714 0.59555015 0.87614697 0.80954382 0.30588421]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### [your code here]\n",
+    "a = np.random.random((2, 3, 5))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.3406785  0.06702206 0.422213   0.05959859 0.35536704]\n",
+      "  [0.75330435 0.23107744 0.68383959 0.56494979 0.56730165]\n",
+      "  [0.46641587 0.71829345 0.13480678 0.7412934  0.17666357]]\n",
+      "\n",
+      " [[0.20797848 0.60300107 0.03129519 0.3856378  0.10992449]\n",
+      "  [0.68726108 0.9841687  0.68080466 0.80694393 0.43993041]\n",
+      "  [0.57175163 0.86460607 0.00445044 0.44495053 0.91932154]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.rand(2, 3, 5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[-1.33372631 -0.12498835 -0.18538791 -0.44617081  0.19535807]\n",
+      "  [ 0.37894504  0.60925635 -0.75655296 -0.17534865  1.17173756]\n",
+      "  [ 1.5948379  -1.72292379  0.95927531 -1.65974282  1.99355143]]\n",
+      "\n",
+      " [[-0.40854561  0.65067227  1.03118057 -1.00445565 -0.94374564]\n",
+      "  [ 0.0982821   0.58783     2.03829835  1.24375535  0.62529715]\n",
+      "  [-0.63530782 -1.74161572 -0.26718194 -1.92670015 -0.72089535]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randn(2, 3, 5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.randint(0, 100, (2, 3, 5))"
    ]
   },
   {
@@ -68,11 +182,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[82 53 54 12  6]\n",
+      "  [97 21  1 13 48]\n",
+      "  [63 23 22  3 51]]\n",
+      "\n",
+      " [[39 57 23 93 27]\n",
+      "  [88 37 34 71 62]\n",
+      "  [24 14 96  2 27]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "b = np.ones((5, 2, 3))\n"
    ]
   },
   {
@@ -102,11 +233,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of a: 30\n",
+      "Size of b: 30\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "#have diffrent shape but the same size\n",
+    "print(\"Size of a:\", a.size)\n",
+    "print(\"Size of b:\", b.size)"
    ]
   },
   {
@@ -136,11 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# No, because they have difftent shape\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m c\u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m+\u001b[39mb\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# No, because they have difftent shape\n",
+    "c= a+b"
    ]
   },
   {
@@ -154,11 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.reshape(2, 3, 5)"
    ]
   },
   {
@@ -171,11 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[83. 54. 55. 13.  7.]\n",
+      "  [98. 22.  2. 14. 49.]\n",
+      "  [64. 24. 23.  4. 52.]]\n",
+      "\n",
+      " [[40. 58. 24. 94. 28.]\n",
+      "  [89. 38. 35. 72. 63.]\n",
+      "  [25. 15. 97.  3. 28.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# because now have the same shape\n",
+    "d = a + c  \n",
+    "print(d)"
    ]
   },
   {
@@ -188,12 +385,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      " [[[82 53 54 12  6]\n",
+      "  [97 21  1 13 48]\n",
+      "  [63 23 22  3 51]]\n",
+      "\n",
+      " [[39 57 23 93 27]\n",
+      "  [88 37 34 71 62]\n",
+      "  [24 14 96  2 27]]]\n",
+      "\n",
+      "Array d:\n",
+      " [[[83. 54. 55. 13.  7.]\n",
+      "  [98. 22.  2. 14. 49.]\n",
+      "  [64. 24. 23.  4. 52.]]\n",
+      "\n",
+      " [[40. 58. 24. 94. 28.]\n",
+      "  [89. 38. 35. 72. 63.]\n",
+      "  [25. 15. 97.  3. 28.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "#d is 1 unit greater than a. This is because d was adding by array of ones. \n",
+    "print(\"Array a:\\n\", a)\n",
+    "print(\"\\nArray d:\\n\", d)\n"
    ]
   },
   {
@@ -206,11 +429,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[82. 53. 54. 12.  6.]\n",
+      "  [97. 21.  1. 13. 48.]\n",
+      "  [63. 23. 22.  3. 51.]]\n",
+      "\n",
+      " [[39. 57. 23. 93. 27.]\n",
+      "  [88. 37. 34. 71. 62.]\n",
+      "  [24. 14. 96.  2. 27.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "print(e)"
    ]
   },
   {
@@ -229,7 +468,7 @@
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "#Yes, e equals a, where c is array of ones.\n"
    ]
   },
   {
@@ -243,12 +482,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum: 98.0\n",
+      "Minimum: 2.0\n",
+      "Mean: 42.43333333333333\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)    \n",
+    "d_min = np.min(d)    \n",
+    "d_mean = np.mean(d)  \n",
+    "\n",
+    "print(\"Maximum:\", d_max)\n",
+    "print(\"Minimum:\", d_min)\n",
+    "print(\"Mean:\", d_mean)"
    ]
   },
   {
@@ -261,11 +517,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty(d.shape)\n",
+    "print(f.shape)\n"
    ]
   },
   {
@@ -287,11 +553,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 75.  75.  75.  25.  25.]\n",
+      "  [100.  25.   0.  25.  75.]\n",
+      "  [ 75.  25.  25.  25.  75.]]\n",
+      "\n",
+      " [[ 25.  75.  25.  75.  25.]\n",
+      "  [ 75.  25.  25.  75.  75.]\n",
+      "  [ 25.  25.  75.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +621,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[83. 54. 55. 13.  7.]\n",
+      "  [98. 22.  2. 14. 49.]\n",
+      "  [64. 24. 23.  4. 52.]]\n",
+      "\n",
+      " [[40. 58. 24. 94. 28.]\n",
+      "  [89. 38. 35. 72. 63.]\n",
+      "  [25. 15. 97.  3. 28.]]]\n",
+      "\n",
+      " [[[ 75.  75.  75.  25.  25.]\n",
+      "  [100.  25.   0.  25.  75.]\n",
+      "  [ 75.  25.  25.  25.  75.]]\n",
+      "\n",
+      " [[ 25.  75.  25.  75.  25.]\n",
+      "  [ 75.  25.  25.  75.  75.]\n",
+      "  [ 25.  25.  75.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "#yes as excpected\n",
+    "print(\"Array d:\")\n",
+    "print(d)\n",
+    "print(\"\\nArray f:\",f)"
    ]
   },
   {
@@ -352,15 +674,60 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      "[[[83. 54. 55. 13.  7.]\n",
+      "  [98. 22.  2. 14. 49.]\n",
+      "  [64. 24. 23.  4. 52.]]\n",
+      "\n",
+      " [[40. 58. 24. 94. 28.]\n",
+      "  [89. 38. 35. 72. 63.]\n",
+      "  [25. 15. 97.  3. 28.]]]\n",
+      "\n",
+      "Array f:\n",
+      "[[['D' 'D' 'D' 'B' 'B']\n",
+      "  ['E' 'B' 'C' 'B' 'D']\n",
+      "  ['D' 'B' 'B' 'B' 'D']]\n",
+      "\n",
+      " [['B' 'D' 'B' 'D' 'B']\n",
+      "  ['D' 'B' 'B' 'D' 'D']\n",
+      "  ['B' 'B' 'D' 'B' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "f = np.empty(d.shape, dtype='object')\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = \"C\"  \n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = \"E\" \n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = \"B\"  \n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = \"D\" \n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = \"A\"  \n",
+    "\n",
+    "print(\"Array d:\")\n",
+    "print(d)\n",
+    "\n",
+    "print(\"\\nArray f:\")\n",
+    "print(f)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
